--- a/main.tex
+++ b/main.tex
@@ -445,44 +445,24 @@ data Conflict : Val as bs → Val cs ds → Val es fs → Set where
 
 \begin{minted}{agda}
 data _⊔_↥_ : (u ~> v) → (u ~> w) → Conflict u v w → Set where
+  Cnf : (f : u ~> v) (g : u ~> w) → u ≠ v → v ≠ w  → u ≠ w → 
+        (c : Conflict u v w) → f ⊔ g ↥ c
 \end{minted}
-	 The definition of this data type is outlined in the following table: 
-\begin{table}[h]
-\centering
-\begin{tabular}{| c | c | c | c |}
-\hline
-\texttt{f : u \textasciitilde> v} & \texttt{g : u \textasciitilde> w} & \texttt{Check} & \texttt{c : Conflict u v w} \\ \hline
-\texttt{Ins α} & \texttt{Ins β} & \texttt{α≠β} & \texttt{InsIns α β} \\ \hline
-\texttt{Del α} & \texttt{Upd α β} & \texttt{α≠β} & \texttt{DelUpd α β} \\ \hline
-\texttt{Upd α β} & \texttt{Del α} & \texttt{α≠β} & \texttt{UpdDel α β} \\ \hline
-\texttt{Upd α β} & \texttt{Upd α γ} & \texttt{α≠β}, \texttt{α≠γ}, \texttt{β≠γ} & \texttt{UpdUpd α β γ} \\ \hline
-\end{tabular}
-\end{table}
 
-% TODO is this table better?
-%	\begin{table}[h]
-%	\centering
-%		\begin{tabular}{| c | c | c | c |}
-%		\hline
-%		\texttt{Constructor} & \texttt{Edit₁} & \texttt{Edit₂} & \texttt{Constraint} \\ \hline
-%		\texttt{InsIns} & \texttt{⊥ \textasciitilde> ⟨ α ⟩} & \texttt{⊥ \textasciitilde> ⟨ β ⟩} & \texttt{α≠β} \\ \hline
-%		\texttt{DelUpd} & \texttt{⟨ α ⟩ \textasciitilde> ⊥} & \texttt{⟨ α ⟩ \textasciitilde> ⟨ β ⟩} & \texttt{α≠β}  \\ \hline
-%		\texttt{UpdDel} & \texttt{⟨ α ⟩ \textasciitilde> ⟨ β ⟩} & \texttt{⟨ α ⟩ \textasciitilde> ⊥} & \texttt{α≠β} \\ \hline
-%		\texttt{UpdUpd} & \texttt{⟨ α ⟩ \textasciitilde> ⟨ β ⟩} & \texttt{⟨ α ⟩ \textasciitilde> ⟨ γ ⟩} & \texttt{α≠β}, \texttt{α≠γ}, \texttt{β≠γ} \\ \hline
-%		\end{tabular}
-%	\end{table}
+	The three inequalities guarantee that all the values involved are different
+        and ensure that the edits are actually incompatible and may not be merged 
+        otherwise. For example if \texttt{u ≡ v} the first edit would be an
+        \emph{identity} edit, which can always be merged by
+        \texttt{Id₁}. Similarly if \texttt{u ≡ w} the second edit could be merged
+        by \texttt{Id₂}. Lastly if \texttt{v ≡ w} the edits \texttt{f} and \texttt{g}
+        would perform the same change and could be merged applying the \texttt{Idem}
+        rule.
+        Given these inequalities the corresponding conflict is uniquely determined,
+        i.e. for any concrete choice of \texttt{u}, \texttt{v} and \texttt{w} that
+        are all different, there is only a single conflict \texttt{c} that applies.
+	As a result also the semantics of conflict is minimal, but still complete
+        because it can encode all the true conflicts.
 
-	The inequalities demanded by each constructor are very important 
-	because they ensure that the changes made are actually incompatible and 
-	therefore correctly produce the corresponding conflict.
-	For example in the first case, if the nodes \texttt{α} and \texttt{β} were 
-	actually the same, the two edits would be two identical inserts, that 
-	could be merged 	by \texttt{Idem}. Similarly in the second and third case, if 
-	the nodes	 \texttt{α} and \texttt{β} were the same, the update would be a 
-	mere copy and the two edits could be merged by \texttt{Id₁} or \texttt{Id₂}. 
-	Lastly in a double update all nodes must be different, otherwise
-	either \texttt{Id₁}, \texttt{Id₂} or \texttt{Idem} would apply.
-	
 	\paragraph{Merge Operator}
 	The binary operator \texttt{⊔} merges 
 	two aligned edits. For every pair of edits \texttt{f} and \texttt{g}, 
@@ -512,17 +492,17 @@ _⊔_ : (f : u ~> v) (g : u ~> w) →
 	\\ \hline
 	\texttt{Del α} & \texttt{Del α} & \textcolor{Green}{\texttt{Idem (Del α)}}
 	\\ \hline
-	\texttt{Del α} & \texttt{Upd α β} & \textcolor{Red}{\texttt{DelUpd (Del α) (Upd α β) α≠β}}
+	\texttt{Del α} & \texttt{Upd α β} & \textcolor{Red}{\texttt{Cnf (Del α) (Upd α β) (⟨ α ⟩ ≠ ⊥) (⟨ α ⟩ ≠ ⟨ β ⟩)  (⊥ ≠ ⟨ β ⟩) (DelUpd α β) }}
 	\\ \hline
-	\texttt{Upd α β} & \texttt{Del α} & \textcolor{Red}{\texttt{UpdDel (Upd α β) (Del α) α≠β}}
+	\texttt{Upd α β} & \texttt{Del α} & \textcolor{Red}{\texttt{Cnf (Upd α β) (Del α) (⟨ α ⟩ ≠ ⟨ β ⟩) (⟨ α ⟩ ≠ ⊥) (⟨ β ⟩ ≠ ⟨ α ⟩) (UpdDel α β)}}
 	\\ \hline
 	\texttt{Ins α} & \texttt{Ins α} & \textcolor{Green}{\texttt{Idem (Ins α)}} 
 	\\	\hline
-	\texttt{Ins α} & \texttt{Ins β} & \textcolor{Red}{\texttt{InsIns (Ins α) (Ins β) α≠β}}
+	\texttt{Ins α} & \texttt{Ins β} & \textcolor{Red}{\texttt{Cnf (Ins α) (Ins β) (⊥ ≠ ⟨ α ⟩) (⊥ ≠ ⟨ β ⟩) (⟨ α ⟩ ≠ ⟨ β ⟩) (InsIns α β)}}
 	\\	\hline
 	\texttt{Upd α β} & \texttt{Upd α β} & \textcolor{Green}{\texttt{Idem (Upd α β)}}
 	\\	\hline
-	\texttt{Upd α β} & \texttt{Upd α γ} & \textcolor{Red}{\texttt{UpdUpd (Upd α β) (Upd α γ) α≠β α≠γ β≠γ}}
+	\texttt{Upd α β} & \texttt{Upd α γ} & \textcolor{Red}{\texttt{Cnf (Upd α β) (Upd α γ) (⟨ α ⟩ ≠ ⟨ β ⟩) ( ⟨ α ⟩ ≠ ⟨ γ ⟩) (⟨ β ⟩ ≠ ⟨ γ ⟩) (UpdUpd α β γ)}}
 	\\ \hline
 	\end{tabular}
 	
